meja/tests/newtype-non-gadt.stderr
File "tests/newtype-non-gadt.meja", line 3, characters 6-7:
Error: Cannot unify t and int
