meja/tests/newtype-non-gadt.meja
let f = fun (type t, x : t) => {
  switch (x) {
    | 1 => 15
    | _ => 20
  };
};
